--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.1.6",
+    "embla-carousel-react": "^8.1.6",
+    "framer-motion": "^11.3.2",
     "lucide-react": "^0.400.0",
     "mongoose": "^8.4.3",
     "next": "14.2.4",
@@ -32,7 +35,7 @@
     "react-email": "^2.1.4",
     "react-hook-form": "^7.52.1",
     "resend": "^3.4.0",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8"
