--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@radix-ui/react-switch": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@react-email/components": "^0.0.21",
-    "ai": "^3.2.16",
+    "ai": "^3.4.9",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
@@ -28,12 +28,12 @@
     "framer-motion": "^11.3.2",
     "lucide-react": "^0.400.0",
     "mongoose": "^8.4.3",
-    "next": "14.2.4",
-    "next-auth": "^4.24.7",
+    "next": "^14.2.14",
+    "next-auth": "^4.24.8",
     "openai": "^4.52.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-email": "^2.1.4",
+    "react-email": "^1.10.1",
     "react-hook-form": "^7.52.1",
     "resend": "^3.4.0",
     "tailwind-merge": "^2.4.0",
